CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(brick VERSION 2.1.0)

SET(CMAKE_SYSTEM_NAME Linux)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/target)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0 -Wall")
# 使能生成动态库
# SET(BUILD_SHARED_LIBS ON)

INCLUDE(cmake/nng.cmake)

FILE(GLOB SOURCES
	"${PROJECT_SOURCE_DIR}/src/*.c")

INCLUDE_DIRECTORIES(
	"${PROJECT_BINARY_DIR}"
	"${PROJECT_SOURCE_DIR}/src")

# nng include files.
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/libraries_path/nng-1.5.2/include")
LINK_DIRECTORIES("${PROJECT_SOURCE_DIR}/build/libraries_path/nng-1.5.2")

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
    pthread
    m)

# nng library.
TARGET_LINK_LIBRARIES(${PROJECT_NAME}  nng)

ADD_SUBDIRECTORY(${LOCAL_LIBRARIES_PATH}/${NNG_DIR_NAME})
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/common)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/peripheral)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/core)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/adapter)

SET(CPACK_PROJECT_NAME ${PROJECT_NAME})
SET(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
INCLUDE(CPack)