CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(brick VERSION 2.1.0)

SET(CMAKE_SYSTEM_NAME Linux)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/target)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0 -Wall")


OPTION(RSYSLOG "RSYSLOG" OFF)
IF(RSYSLOG)
	ADD_DEFINITIONS(-DRSYSLOG)
ENDIF(RSYSLOG)


INCLUDE(cmake/nng.cmake)


FILE(GLOB SOURCES
	"${PROJECT_SOURCE_DIR}/src/*.c")

INCLUDE_DIRECTORIES(
	"${PROJECT_BINARY_DIR}"
	"${PROJECT_SOURCE_DIR}/src")

# nng include files.
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/libraries_path/nng-1.5.2/include")
LINK_DIRECTORIES("${PROJECT_SOURCE_DIR}/build/libraries_path/nng-1.5.2")

ADD_EXECUTABLE(${PROJECT_NAME})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
    pthread
    m)

MESSAGE(STATUS "ADD_SUBDIRECTORY ${LOCAL_LIBRARIES_PATH}/${NNG_DIR_NAME}")
ADD_SUBDIRECTORY(${LOCAL_LIBRARIES_PATH}/${NNG_DIR_NAME})

# nng library.
TARGET_LINK_LIBRARIES(${PROJECT_NAME}  nng)

MESSAGE(STATUS "ADD_SUBDIRECTORY ${PROJECT_SOURCE_DIR}/src")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src)

SET(CPACK_PROJECT_NAME ${PROJECT_NAME})
SET(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
INCLUDE(CPack)
