file(GLOB SOURCES_TAR 
	"${CMAKE_CURRENT_LIST_DIR}/*.c")

target_sources(${PROJECT_NAME}
	PRIVATE
	${SOURCES_TAR}
	PUBLIC
	${SOURCES_TAR}
)

target_include_directories(${PROJECT_NAME}
	PUBLIC
	"${CMAKE_CURRENT_LIST_DIR}"
)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/common)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/peripheral)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/core)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/adapter)